--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   flutter_local_notifications: ^15.1.0+1
   app_settings: 4.2.0
 #  flutter_local_notifications: ^16.2.0
+  firebase_auth: ^4.15.0
+  firebase_database: ^10.3.6
+  cloud_firestore: ^4.13.3
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/images/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
